Rename Modrinth App to Migurinth, update related references and release some changes

--- a/apps/app/Cargo.toml
+++ b/apps/app/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "theseus_gui"
 version = "0.9.3"
-description = "The Modrinth App is a desktop application for managing your Minecraft mods"
+description = "The Migurinth App is a desktop application for managing your Minecraft mods"
 license = "GPL-3.0-only"
 repository = "https://github.com/modrinth/code/apps/app/"
 edition = "2021"
