--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,7 +3,8 @@ name: 'Migurinth App build'
 on:
   push:
     branches:
-      - *
+      - main
+      - release
     tags:
       - 'v*'
     paths:
