updated clean to powershell
Signed-off-by: MiguVT <71216796+MiguVT@users.noreply.github.com>

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -127,7 +127,7 @@ jobs:
       # Clean all the previous build files
       - name: Clean build files
         if: startsWith(matrix.platform, 'windows')
-        run: rmdir /s /q target
+        run: Remove-Item -Recurse -Force target
 
       - name: Clean build files
         if: startsWith(matrix.platform, 'macos')
