--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -186,7 +186,6 @@ jobs:
         run: |
           VERSION=$(jq -r '.version' apps/app/tauri.conf.json)
           echo "version=$VERSION" >> $GITHUB_ENV
-          echo "VERSION=$VERSION" >> $GITHUB_ENV
 
       - name: Create GitHub Release
         id: create_release
@@ -316,6 +315,6 @@ jobs:
 
       - name: Upload updates.json to release
         shell: bash
-        run: gh release upload "v${{ env.VERSION }}" updates.json --clobber
+        run: gh release upload "v${{ env.version }}" updates.json --clobber
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
