--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -146,23 +146,17 @@ jobs:
         with:
           name: ${{ matrix.platform }}
           path: |
-            target/release/bundle/*/*.dmg
-            target/release/bundle/*/*.app.tar.gz
-            target/release/bundle/*/*.app.tar.gz.sig
+            target/release/bundle/appimage/*.AppImage
+            target/release/bundle/appimage/*.AppImage.sig
 
-            target/release/bundle/*/*.AppImage
-            target/release/bundle/*/*.AppImage.tar.gz
-            target/release/bundle/*/*.AppImage.tar.gz.sig
-            target/release/bundle/*/*.deb
-            target/release/bundle/*/*.rpm
+            target/release/bundle/macos/*.tar.gz
+            target/release/bundle/macos/*.tar.gz.sig
 
             target/release/bundle/msi/*.msi
-            target/release/bundle/msi/*.msi.zip
-            target/release/bundle/msi/*.msi.zip.sig
+            target/release/bundle/msi/*.msi.sig
 
             target/release/bundle/nsis/*.exe
-            target/release/bundle/nsis/*.nsis.zip
-            target/release/bundle/nsis/*.nsis.zip.sig
+            target/release/bundle/nsis/*.exe.sig
 
   release:
     needs: build
@@ -248,10 +242,10 @@ jobs:
           PUB_DATE=$(date -u +"%Y-%m-%dT%H:%M:%SZ")
 
           declare -A PLATFORMS=(
-            ["linux-x86_64"]="release/bundle/appimage/Migurinth_${VERSION}_amd64.AppImage.tar.gz;release/bundle/deb/Migurinth_${VERSION}_amd64.deb,release/bundle/appimage/Migurinth_${VERSION}_amd64.AppImage,release/bundle/rpm/Migurinth-${VERSION}-1.x86_64.rpm"
-            ["windows-x86_64"]="release/bundle/nsis/Migurinth_${VERSION}_x64-setup.nsis.zip;release/bundle/nsis/Migurinth_${VERSION}_x64-setup.exe"
-            ["darwin-x86_64"]="universal-apple-darwin/release/bundle/macos/Migurinth.app.tar.gz;universal-apple-darwin/release/bundle/dmg/Migurinth_${VERSION}_universal.dmg"
-            ["darwin-aarch64"]="universal-apple-darwin/release/bundle/macos/Migurinth.app.tar.gz;universal-apple-darwin/release/bundle/dmg/Migurinth_${VERSION}_universal.dmg"
+            ["linux-x86_64"]="bundle/appimage/Migurinth.AppImage;bundle/appimage/Migurinth.AppImage"
+            ["darwin-x86_64"]="bundle/macos/Migurinth.app.tar.gz;bundle/macos/Migurinth.app.tar.gz"
+            ["darwin-aarch64"]="bundle/macos/Migurinth.app.tar.gz;bundle/macos/Migurinth.app.tar.gz"
+            ["windows-x86_64"]="bundle/nsis/Migurinth-setup.exe;bundle/nsis/Migurinth-setup.exe, bundle/msi/Migurinth.msi"
           )
 
           echo '{' > $UPDATES_JSON
@@ -265,17 +259,15 @@ jobs:
             ENTRY="${PLATFORMS[$platform]}"
             COMPRESSED_FILE=$(echo "$ENTRY" | cut -d';' -f1)
             INSTALL_FILES=$(echo "$ENTRY" | cut -d';' -f2)
-
-            COMPRESSED_URL="${BASE_URL}/$(basename "$COMPRESSED_FILE" | tr ' ' '.')"
             SIG_FILE="artifacts/${COMPRESSED_FILE}.sig"
 
+            # Solo genera entrada si hay firma
             if [ ! -f "$SIG_FILE" ]; then
-              echo "⚠️ No signature found for ${COMPRESSED_FILE} ($SIG_FILE)" >&2
-              echo "⚠️ Available files:" >&2
-              ls -laR $(dirname "$SIG_FILE")
+              echo "⚠️ Faltando firma para ${COMPRESSED_FILE}, se omite." >&2
               continue
             fi
 
+            COMPRESSED_URL="${BASE_URL}/$(basename "$COMPRESSED_FILE" | tr ' ' '.')"
             SIGNATURE=$(cat "$SIG_FILE" | tr -d '\n')
 
             IFS=',' read -ra INSTALL_ARRAY <<< "$INSTALL_FILES"
