--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,7 +8,7 @@ on:
     tags:
       - 'v*'
     paths:
-      - .github/workflows/theseus-release.yml
+      - .github/workflows/build.yml
       - 'apps/app/**'
       - 'apps/app-frontend/**'
       - 'apps/labrinth/src/common/**'
@@ -18,7 +18,6 @@ on:
       - 'packages/assets/**'
       - 'packages/ui/**'
       - 'packages/utils/**'
-      - 'packages/daedalus/**'
   workflow_dispatch:
 
 jobs:
@@ -46,32 +45,34 @@ jobs:
         with:
           components: rustfmt, clippy
 
+      - name: Clean old bundle artifacts
+        run: |
+          find target/release -type f ! -name '*.keep' -delete
+
       - name: Setup rust cache
         uses: actions/cache@v4
         with:
           path: |
             target/**
+            !target/release
             !target/*/release/bundle/*/*.dmg
             !target/*/release/bundle/*/*.app.tar.gz
             !target/*/release/bundle/*/*.app.tar.gz.sig
             !target/release/bundle/*/*.dmg
             !target/release/bundle/*/*.app.tar.gz
             !target/release/bundle/*/*.app.tar.gz.sig
-
             !target/release/bundle/appimage/*.AppImage
             !target/release/bundle/appimage/*.AppImage.tar.gz
             !target/release/bundle/appimage/*.AppImage.tar.gz.sig
             !target/release/bundle/deb/*.deb
             !target/release/bundle/rpm/*.rpm
-
             !target/release/bundle/msi/*.msi
             !target/release/bundle/msi/*.msi.zip
             !target/release/bundle/msi/*.msi.zip.sig
-
             !target/release/bundle/nsis/*.exe
             !target/release/bundle/nsis/*.nsis.zip
             !target/release/bundle/nsis/*.nsis.zip.sig
-          key: ${{ runner.os }}-rust-target-${{ hashFiles('**/Cargo.lock', 'apps/app/tauri.conf.json') }}
+          key: ${{ runner.os }}-rust-target-${{ hashFiles('**/Cargo.lock', '!apps/app/tauri.conf.json') }}
           restore-keys: |
             ${{ runner.os }}-rust-target-
 
