Removes Windows code signing configuration
Removes the Windows-specific code signing configuration.

This simplifies the build process by removing the dependency on
`jsign` and related configuration in `tauri-release.conf.json` and
`tauri.conf.json`. The rationale behind this change is not provided
in the context, but one might infer that the signing process is
handled differently now, perhaps outside of the current build
workflow.

--- a/apps/app/tauri-release.conf.json
+++ b/apps/app/tauri-release.conf.json
@@ -1,24 +1,6 @@
 {
   "bundle": {
-    "createUpdaterArtifacts": true,
-    "windows": {
-      "signCommand": {
-        "cmd": "jsign",
-        "args": [
-          "sign",
-          "--verbose",
-          "--storetype",
-          "DIGICERTONE",
-          "--keystore",
-          "https://clientauth.one.digicert.com",
-          "--storepass",
-          "env:DIGICERT_ONE_SIGNER_CREDENTIALS",
-          "--tsaurl",
-          "https://timestamp.sectigo.com,http://timestamp.digicert.com",
-          "%1"
-        ]
-      }
-    }
+    "createUpdaterArtifacts": true
   },
   "build": {
     "features": ["updater"]
