Refactors build workflow secrets
Simplifies the build workflow by inheriting secrets directly from the calling workflow.

This allows the build workflow to inherit secrets, streamlining configuration.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,6 +38,7 @@ jobs:
   build:
     needs: check_version
     uses: ./.github/workflows/theseus-build.yml
+    secrets: inherit
 
   release:
     needs: [check_version, build]
