--- a/.github/workflows/theseus-build.yml
+++ b/.github/workflows/theseus-build.yml
@@ -1,4 +1,4 @@
-name: Migurinth App build
+name: Migurinth_ build
 on:
   push:
     branches:
@@ -126,10 +126,10 @@ jobs:
         with:
           name: App bundle (${{ matrix.artifact-target-name }})
           path: |
-            target/release/bundle/appimage/Migurinth App_*.AppImage*
-            target/release/bundle/deb/Migurinth App_*.deb*
-            target/release/bundle/rpm/Migurinth App-*.rpm*
-            target/universal-apple-darwin/release/bundle/macos/Migurinth App.app.tar.gz*
-            target/universal-apple-darwin/release/bundle/dmg/Migurinth App_*.dmg*
-            target/release/bundle/nsis/Migurinth App_*-setup.exe*
-            target/release/bundle/nsis/Migurinth App_*-setup.nsis.zip*
+            target/release/bundle/appimage/Migurinth_*.AppImage*
+            target/release/bundle/deb/Migurinth_*.deb*
+            target/release/bundle/rpm/Migurinth_-*.rpm*
+            target/universal-apple-darwin/release/bundle/macos/Migurinth_.app.tar.gz*
+            target/universal-apple-darwin/release/bundle/dmg/Migurinth_*.dmg*
+            target/release/bundle/nsis/Migurinth_*-setup.exe*
+            target/release/bundle/nsis/Migurinth_*-setup.nsis.zip*
