Improves caching for workflow runs
Adds a cache key to the workflow runs based on the platform and the Cargo.lock file. This ensures that workflow runs are cached correctly, improving the speed of subsequent runs.

--- a/.github/workflows/theseus-build.yml
+++ b/.github/workflows/theseus-build.yml
@@ -45,6 +45,7 @@ jobs:
         with:
           rustflags: ''
           target: ${{ startsWith(matrix.platform, 'macos') && 'x86_64-apple-darwin' || '' }}
+          cache-key: ${{ matrix.platform }}-${{ hashFiles('**/Cargo.lock') }}
 
       - name: 🧰 Install pnpm
         uses: pnpm/action-setup@v4
