--- a/.github/workflows/theseus-build.yml
+++ b/.github/workflows/theseus-build.yml
@@ -75,7 +75,7 @@ jobs:
         id: get-version-info
         shell: bash
         run: |
-          git fetch --tags
+          git fetch --tags --force
           LATEST_TAG=$(git describe --tags --abbrev=0 2>/dev/null || echo "v1.0.0")
           COMMIT_COUNT=$(git rev-list --count ${LATEST_TAG}..HEAD 2>/dev/null || echo "0")
           SHORT_SHA=$(echo "${{ github.sha }}" | cut -c1-7)
