--- a/apps/app/Cargo.toml
+++ b/apps/app/Cargo.toml
@@ -1,10 +1,12 @@
 [package]
 name = "theseus_gui"
-version = "1.0.0-local"                                                                      # The actual version is set by the theseus-build workflow on tagging
+version = "1.0.0-local"                                                                     # The actual version is set by the theseus-build workflow on tagging
 edition.workspace = true
 description = "The Migurinth App is a desktop application for managing your Minecraft mods"
 license = "GPL-3.0-only"
 repository = "https://github.com/modrinth/code/apps/app/"
+
+[dependencies]
 chrono = { workspace = true }
 daedalus = { workspace = true }
 dashmap = { workspace = true }
